2006-03-01	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_get_selected_items): Return the
	  selected items in the correct order.

2006-02-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): In single-click
	  mode, do not emit "row-activated" if the button-press event was for
	  one of the associated windows (i.e. the columns header window).

2006-02-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Handle scrolling to a path before the view
	  is realized/layouted.

2006-02-27	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c, exo/exo-tree-view.c: Also drop the prelit
	  timeout defines.
	* exo/exo-icon-view.c(exo_icon_view_button_press_event): Do not alter
	  selection while shift is pressed when clicking on an already selected
	  file. Bug #1501.

2006-02-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c, exo/exo-tree-view.c: Revert the hover-autoselect
	  stuff for now, as the current implementation can cause trouble. Maybe
	  re-add it later, once a good implementation is available.

2006-02-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Reset the cursor in single-click mode when the
	  pointer leaves the icon view window.

2006-02-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.{c,h}, exo/Makefile.am, exo/exo.h, exo/exo.symbols:
	  Add ExoTreeView which derives from GtkTreeView and extends it with
	  single-click support and also works around the GtkTreeView limitation
	  of dragging multiple files.
	* docs/references/: Update the API documentation.
	* po/POTFILES.in: Add exo-tree-view.c here.
	* po/libexo-0.3.pot, po/*.po: Update translations.

2006-02-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Automatically select prelited items after a
	  certain amount of time in single-click mode.

2006-02-25	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_release_event): Allow multi