@@ -82,8 +82,8 @@ dnl *** Check for standard header files ***
 dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
-                  md5.h regex.h string.h sys/resource.h sys/stat.h sys/time.h \
-                  sys/types.h time.h])
+                  md5.h mmintrin.h regex.h string.h sys/resource.h sys/stat.h \
+                  sys/time.h sys/types.h time.h])
 
 dnl ************************************
 dnl *** Check for standard functions ***
