@@ -296,6 +296,9 @@ exo_wrap_table_get_type
 <SECTION>
 <FILE>exo-gdk-pixbuf-extensions</FILE>
 <TITLE>Extensions to gdk-pixbuf</TITLE>
+exo_gdk_pixbuf_colorize
+exo_gdk_pixbuf_lucent
+exo_gdk_pixbuf_spotlight
 exo_gdk_pixbuf_scale_down
 exo_gdk_pixbuf_scale_ratio
 </SECTION>
