@@ -18,6 +18,35 @@ provided by the gdk-pixbuf library.
 <!-- ##### SECTION Stability_Level ##### -->
 
 
+<!-- ##### FUNCTION exo_gdk_pixbuf_colorize ##### -->
+<para>
+
+</para>
+
+@src: 
+@color: 
+@Returns: 
+
+
+<!-- ##### FUNCTION exo_gdk_pixbuf_lucent ##### -->
+<para>
+
+</para>
+
+@src: 
+@percent: 
+@Returns: 
+
+
+<!-- ##### FUNCTION exo_gdk_pixbuf_spotlight ##### -->
+<para>
+
+</para>
+
+@src: 
+@Returns: 
+
+
 <!-- ##### FUNCTION exo_gdk_pixbuf_scale_down ##### -->
 <para>
 
