@@ -1,3 +1,11 @@
+2006-03-02	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in, exo/exo-gdk-pixbuf-extensions.{c,h},
+	  exo/exo.symbols: Import exo_gdk_pixbuf_colorize, exo_gdk_pixbuf_lucent
+	  and exo_gdk_pixbuf_spotlight into libexo, so they can also be used by
+	  xfdesktop.
+	* docs/reference/: Update the API documentation.
+
 2006-03-01	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_get_selected_items): Return the
